# symmetry

./: FaceData_8cpp.html  FaceData_8cpp_source.html  FaceData_8h.html  FaceData_8h_source.html  FaceInfoList_8cpp.html  FaceInfoList_8cpp_source.html  FaceInfoList_8h.html  FaceInfoList_8h_source.html  FaceInfo_8cpp.html  FaceInfo_8cpp_source.html  FaceInfo_8h.html  FaceInfo_8h_source.html  FacesDataList_8cpp.html  FacesDataList_8cpp_source.html  FacesDataList_8h.html  FacesDataList_8h_source.html  MetricFacetList_8cpp.html  MetricFacetList_8cpp_source.html  MetricFacetList_8h.html  MetricFacetList_8h_source.html  annotated.html  classFaceData.html  classFaceInfo.html  classMetricFacetList.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  mainpage_8h.html  mainpage_8h_source.html  test_8cpp.html  test_8cpp_source.html
src/: CMakeLists.txt  Doxyfile.in  mainpage.h  test.cpp
src/containers/: CMakeLists.txt  FaceData.cpp  FaceData.h  FaceInfo.cpp  FaceInfo.h  FaceInfoList.h  FacesDataList.h
src/generators/: CMakeLists.txt  MetricFacetList.cpp  MetricFacetList.h
src/permlib/: permutation.h  permutationword.h  version.h
src/permlib/change/: conjugating_base_change.h  simple_base_change.h
src/permlib/construct/: base_construction.h  known_bsgs_construction.h  random_schreier_sims_construction.h  schreier_sims_construction.h
src/permlib/invariant/: dade_invariants.h
src/permlib/search/partition/: r_base.h  (+1 more)
src/permlib/test/: giant_test.h  group_type.h  type_recognition.h
src/tests/: CMakeLists.txt  FaceData_Tests.cpp  FaceInfo_Tests.cpp  MetricFacetList_Tests.cpp  TestRunner.cpp
(+18 files in other folders)
